sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:2: error: Missing closing brace `}' assumed here
def shellSort()  {
^AlgShellSort:2: error: expected class or object definition
def shellSort()  {
^AlgShellSort:33: error: Missing closing brace `}' assumed here
  var x:Int=getNombreValeurs()
  ^