sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var x:Int=getNombreValeurs()
  var v=0
  var y=0
  var ecart=x/2
  var t=i
  while (ecart>0){
  for (i<-1 to x-1) {
    y=i
    v=getValeur(i)
    while (t>=0) {
      if (plusPetitQue(t-ecart,getValeur(t))) {
        setValeur(t,getValeur(t-ecart))
        t=t-ecart
        y=t
      }
    }
  setValeur(y,v)
  }
        
      
      
    

    
    
      
      
      
    
    def insertionSort() {
  var x:Int=getNombreValeurs()
  var v=0
  var y=0
  for (i<-1 to x-1) {
    y=i
    v=getValeur(i)
    for (j<-i-1 to 0 by -1) {
      if (plusPetitQue(j,v)==false) {  
        setValeur(j+1,getValeur(j))
        y=j
      }
    }
    setValeur(y,v)
   }
}